--- a/client/styles/globals.css
+++ b/client/styles/globals.css
@@ -1,6 +1,7 @@
 html,
 body {
   padding: 0;
+  overflow: hidden;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
@@ -13,4 +14,8 @@ a {
 
 * {
   box-sizing: border-box;
+}
+
+.completedbar {
+  color: rgb(23, 239, 151)
 }
